// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components renders Calculator component correctly 1`] = `
<section
  className="container"
>
  <div
    className="key darkgray"
    data-testid="displayCalc"
  >
    0
  </div>
  <div
    className="keyContainer"
  >
    <button
      className="key lightgray"
      onClick={[Function]}
      type="button"
    >
      AC
    </button>
    <button
      className="key lightgray"
      onClick={[Function]}
      type="button"
    >
      +/-
    </button>
    <button
      className="key lightgray"
      onClick={[Function]}
      type="button"
    >
      %
    </button>
    <button
      className="key lightgray"
      onClick={[Function]}
      type="button"
    >
      ÷
    </button>
    <button
      className="key lightgray"
      onClick={[Function]}
      type="button"
    >
      7
    </button>
    <button
      className="key lightgray"
      onClick={[Function]}
      type="button"
    >
      8
    </button>
    <button
      className="key lightgray"
      onClick={[Function]}
      type="button"
    >
      9
    </button>
    <button
      className="key lightgray"
      onClick={[Function]}
      type="button"
    >
      x
    </button>
    <button
      className="key lightgray"
      onClick={[Function]}
      type="button"
    >
      4
    </button>
    <button
      className="key lightgray"
      onClick={[Function]}
      type="button"
    >
      5
    </button>
    <button
      className="key lightgray"
      onClick={[Function]}
      type="button"
    >
      6
    </button>
    <button
      className="key lightgray"
      onClick={[Function]}
      type="button"
    >
      -
    </button>
    <button
      className="key lightgray"
      onClick={[Function]}
      type="button"
    >
      1
    </button>
    <button
      className="key lightgray"
      onClick={[Function]}
      type="button"
    >
      2
    </button>
    <button
      className="key lightgray"
      onClick={[Function]}
      type="button"
    >
      3
    </button>
    <button
      className="key lightgray"
      onClick={[Function]}
      type="button"
    >
      +
    </button>
    <button
      className="key lightgray"
      onClick={[Function]}
      type="button"
    >
      0
    </button>
    <button
      className="key lightgray"
      onClick={[Function]}
      type="button"
    >
      .
    </button>
    <button
      className="key lightgray"
      onClick={[Function]}
      type="button"
    >
      =
    </button>
  </div>
</section>
`;

exports[`components renders Display component correctly 1`] = `
<div
  className="key darkgray"
  data-testid="displayCalc"
>
  1
</div>
`;

exports[`components renders Header component correctly 1`] = `
<header
  className="layout"
>
  <h1>
    Math Magicians
  </h1>
  <ul
    className="nav-links"
  >
    <li>
      <a
        className=""
        href="/math_magicians"
        onClick={[Function]}
      >
        Home
      </a>
    </li>
    <li>
      <a
        className=""
        href="/Calculator"
        onClick={[Function]}
      >
        Calculator
      </a>
    </li>
    <li>
      <a
        className=""
        href="/Quote"
        onClick={[Function]}
      >
        Quote
      </a>
    </li>
  </ul>
</header>
`;

exports[`components renders Key component correctly 1`] = `
<button
  onClick={[Function]}
  type="button"
/>
`;

exports[`components renders Quote component correctly 1`] = `
<section
  className="quote"
>
  <h3>
    Mathematics is not about numbers, equations, computations, or algorithms: it is about understanding. -William Paul Thurston
  </h3>
</section>
`;
